--- a/src/components/Pages/FirstPage/FirstPage.css
+++ b/src/components/Pages/FirstPage/FirstPage.css
@@ -91,6 +91,17 @@
   text-transform: uppercase;
 }
 
+.search-button:hover {
+  box-shadow: 0 4px 4px rgb(104, 97, 97);
+}
+
+.search-button:active {
+  border: 1px solid #ffa800;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background-color: transparent;
+  color: #ffa800;
+}
+
 
 .about-title {
   font-size: 1.3em;
@@ -149,6 +160,18 @@
   border: 1px solid #ffffff;
   border-radius: 7px;
   cursor: pointer;
+}
+
+.how-button:hover {
+  border-color: transparent;
+  background: #ffca62;
+  color: #2d2b2f;
+}
+
+.how-button:active {
+  border-color: transparent;
+  background-color: #ffffff;
+  color: #2d2b2f;
 }
 
 .how-container {
