--- a/src/components/Pages/OrderPage/Sidebar/Sidebar.css
+++ b/src/components/Pages/OrderPage/Sidebar/Sidebar.css
@@ -6,7 +6,6 @@
   padding: 30px 25px 0 30px;
 }
 
-
 .sidebar-dates-text {
   color: #ffffff;
   font-size: 1.3em;
@@ -65,6 +64,38 @@
   align-items: center;
   display: flex;
   margin-left: auto;
+}
+
+.item-form-check {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+.item-form-label {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  width: 72px;
+  height: 19px;
+  border-radius: 10px;
+  background: #ffffff;
+  position: relative;
+  transition: background-color 0.2s;
+}
+
+.item-form-label .item-form-label-switch {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 28px;
+  height: 28px;
+  border-radius: 45px;
+  transition: 0.2s;
+  background: #c4c4c4;
+  box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29);
 }
 
 .options-item-image {
@@ -284,4 +315,179 @@
   font-size: 36px;
   font-weight: 700;
   line-height: 42px;
+}
+
+.completed {
+  background: #3e3c41;
+  display: inline-block;
+  margin-bottom: 10px;
+  width: 300px;
+  padding: 30px 25px 0 30px;
+}
+
+.completed-title {
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 35px;
+  text-transform: uppercase;
+  color: #e5e5e5;
+  margin: 0;
+  text-align: center;
+  position: relative;
+}
+
+.completed-title::after {
+  content: '';
+  position: absolute;
+  width: 364px;
+  height: 0;
+  border-bottom: 1px solid #e5e5e5;
+  right: -28px;
+  bottom: -33px;
+}
+
+.to-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.header-left {
+  display: flex;
+  align-items: baseline;
+  gap: 21px;
+}
+
+.header-left-img {
+  width: 32px;
+  height: 26px;
+}
+
+.header-left-title {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 35px;
+  color: #ffffff;
+}
+
+.header-left-date {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  color: #ffffff;
+}
+
+.to-duration {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  color: #E5E5E5;
+}
+
+.to-duration-text {
+  margin-bottom: 0;
+  text-align: center;
+}
+
+
+
+.to-train {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.to-timing-upper {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.to-timing-lower {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.to-train-left-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  color: #E5E5E5;
+}
+
+.to-train-right-header {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: right;
+  color: #FFFFFF;
+  margin-bottom: 0;
+}
+
+.to-train-right-text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: right;
+  color: #FFFFFF;
+}
+
+.upper-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+
+  color: #928F94;
+}
+
+.to-train-right-header {
+  color: #FFFFFF;
+}
+
+.completed-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.price-right {
+  display: flex;
+  align-items: center;
+}
+
+.price-left {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 35px;
+  text-transform: uppercase;
+
+  color: #FFFFFF;
+}
+
+.price-right-title {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+
+  color: #FFA800;
+}
+
+.price-right-img {
+  padding-left: 10px;
+}
+
+.header-button {
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  box-sizing: border-box;
+  border-radius: 5px;
+  background-color: inherit;
+  position: relative;
+  margin-bottom: 3px;
+  margin-left: auto;
+  border: 2px solid #c4c4c4;
+  color: #C4C4C4;
 }
