--- a/src/components/Pages/OrderPage/Passengers/Passengers.css
+++ b/src/components/Pages/OrderPage/Passengers/Passengers.css
@@ -1,233 +1,3 @@
-
-
-.passenger {
-  background: #ffffff;
-  border: 1px solid #c4c4c4;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
-  margin-bottom: 30px;
-}
-
-.passenger-head {
-  background: #f9f9f9;
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-}
-
-.head-left {
-  display: flex;
-}
-
-.head-title {
-  font-weight: 400;
-  font-size: 30px;
-  line-height: 35px;
-  color: #292929;
-}
-
-.head-toggle {
-  border: none;
-  margin-left: 15px;
-  padding-right: 15px;
-  background-color: inherit;
-}
-
-.passenger-body {
-  border-bottom: 1px dashed #928f94;
-  padding-bottom: 30px;
-}
-
-.head-delete {
-  margin-right: 15px;
-  border: none;
-  background-color: inherit;
-}
-
-.body-form {
-  padding-left: 30px;
-  border-top: 1px dashed #928f94;
-}
-
-.passenger-titles {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
-  color: #928F94;
-  margin-bottom: 0;
-}
-
-.body-form-select {
-  box-sizing: border-box;
-  height: 50px;
-  width: 280px;
-  border: 1px solid #928f94;
-  border-radius: 5px;
-  color: #292929;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
-  padding-left: 13px;
-  outline: none;
-  margin-top: 16px;
-}
-
-.body-names {
-  border-top: none;
-  display: flex;
-  margin-top: 45px;
-}
-
-.names-label-input {
-  height: 50px;
-  width: 280px;
-  border: 1px solid #928f94;
-  border-radius: 5px;
-}
-
-.input-birth {
-  width: 220px;
-}
-
-.body-inputs {
-  display: flex;
-  padding-top: 30px;
-}
-
-.inputs-sex {
-  display: flex;
-  flex-direction: column;
-  margin-left: 30px;
-  padding-right: 30px;
-}
-
-.names-label {
-  margin-right: 25px;
-  display: flex;
-  flex-direction: column;
-}
-
-.controls-lable {
-  box-sizing: border-box;
-  display: inline-block;
-  width: 100px;
-  padding: 9px 0 8px 0;
-  border: 1px solid #928f94;
-  border-radius: 5px;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 35px;
-  text-transform: uppercase;
-  text-align: center;
-  color: #000000;
-}
-
-.controls-radio {
-  display: none;
-}
-
-.male {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-}
-
-.female {
-  margin-left: -1px;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.controls-radio:checked+.controls-lable {
-  background-color: #ffa800;
-}
-
-
-.body-check {
-  display: flex;
-  border-bottom: 1px dashed #928f94;
-  padding-bottom: 10px;
-}
-
-.body-check-input {
-  margin-left: 30px;
-}
-
-
-
-
-.document {
-  display: flex;
-  padding-top: 30px;
-}
-
-.document-label {
-  display: flex;
-  flex-direction: column;
-  margin-left: 30px;
-}
-
-.document-type-select, .document-input {
-  height: 50px;
-  width: 200px;
-  border: 1px solid #928f94;
-  border-radius: 5px;
-}
-
-
-
-.passenger-foot {
-  box-sizing: border-box;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  min-height: 126px;
-  margin-right: 30px;
-}
-
-.foot-button {
-  background-color: inherit;
-  padding: 12px 24px;
-  border: 1px solid #292929;
-  border-radius: 5px;
-  color: #292929;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-}
-
-.foot-button:hover {
-  background-color: #ffffff;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  color: #ffa800;
-}
-
-.foot-button:active {
-  background-color: #ffa800;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  color: #292929;
-}
-
-
-.passengers-new {
-  display: flex;
-  justify-content: space-between;
-  background: #ffffff;
-  border: 1px solid #c4c4c4;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
-  margin-bottom: 30px;
-}
-
-.passengers-new-title {
-  margin-left: 30px;
-}
-
-.passengers-new-button {
-  border: none;
-  background-color: inherit;
-  margin-right: 30px;
-}
-
-
 .passengers {
   width: 80%;
   margin-left: 90px;
@@ -243,31 +13,324 @@
   margin-bottom: 140px;
 }
 
-.nextpage-button {
-  margin-left: auto;
-  margin-top: 100px;
+.passengers-button {
   height: 60px;
   padding: 0 70px 0 70px;
-
   font-weight: 700;
   font-size: 24px;
   text-transform: uppercase;
   color: #ffffff;
-
   background: #ffa800;
   border-radius: 5px;
   border: none;
-  position: absolute;
-  right: 0;
 }
 
-.nextpage-button:hover {
+.passengers-button:hover {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.nextpage-button:active {
+.passengers-button:active {
   color: #ffa800;
   border: 1px solid #ffa800;
   background-color: #e5e5e5;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.passengers-button:disabled {
+  background: #928f94;
+  color: #ffffff;
+}
+
+
+
+
+.passenger {
+  background: #ffffff;
+  border: 1px solid #c4c4c4;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+  margin-bottom: 30px;
+}
+
+.passenger-header {
+  background: #f9f9f9;
+  display: flex;
+  align-items: center;
+}
+
+.passenger-header-title {
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 35px;
+  color: #292929;
+  margin: 40px 0 30px 71px;
+  position: relative;
+}
+
+.passenger-header-toggle {
+  content: '';
+  width: 32px;
+  height: 32px;
+  display: inline-block;
+  margin-left: 23px;
+  margin-right: 16px;
+  position: absolute;
+  left: -66px;
+  background-repeat: no-repeat;
+}
+
+.hide {
+  background-image: url('../../../../../src/images/passenger/pass1.png');
+}
+
+.show {
+  background-image: url('../../../../../src/images/passenger/pass4.png');
+}
+
+.passenger-header-delete {
+  margin-left: auto;
+  margin-right: 40px;
+  width: 12px;
+  height: 12px;
+  border: 0;
+
+  background-image: url('../../../../../src/images/passenger/pass2.png');
+  background-color: transparent;
+  background-repeat: no-repeat;
+}
+
+.passengerForm--active {
+  border-top: 1px dashed #928f94;
+}
+
+.passengerForm-section {
+  border-bottom: 1px dashed #928f94;
+  padding: 38px 35px 31px 35px;
+}
+
+.passengerForm-field {
+  box-sizing: border-box;
+  height: 50px;
+  border: 1px solid #928f94;
+  border-radius: 5px;
+  color: #292929;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  padding-left: 13px;
+  outline: none;
+  margin-top: 16px;
+}
+
+.passengerForm-field--name {
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.passengerForm-field::placeholder {
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.passengerForm-field:focus {
+  border: 1px solid #ffa800;
+}
+
+.passengerForm-list {
+  width: 280px;
+  padding-right: 20px;
+  margin: 0;
+
+  background-image: url('../../../../images/passenger/pass7.png');
+  background-repeat: no-repeat;
+  background-position: right 22px center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
+  background-color: inherit;
+}
+
+.passengerForm-list::-ms-expand {
+  display: none;
+}
+
+.passengerForm-controls {
+  border-top: none;
+  display: flex;
+  margin-top: 45px;
+}
+
+.passengerForm-controls.passengerForm-section {
+  margin-top: 0;
+  padding-top: 13px;
+}
+
+.passengerForm-label {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+
+  color: #928f94;
+  margin-right: 25px;
+  display: flex;
+  flex-direction: column;
+}
+
+.passengerForm-label:last-child {
+  margin-right: 0;
+}
+
+.passengerForm-radio {
+  margin-right: 35px;
+}
+
+.passengerForm-radio-controls {
+  box-sizing: border-box;
+  margin-top: 16px;
+}
+
+p.passengerForm-label {
+  margin: 0;
+}
+
+.passengerForm-radio-field {
+  display: none;
+}
+
+.passengerForm-radio-label {
+  box-sizing: border-box;
+  display: inline-block;
+  height: 50px;
+  width: 103px;
+  padding: 9px 0 8px 0;
+  border: 1px solid #928f94;
+  border-radius: 5px;
+
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 35px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #000000;
+}
+
+.passengerForm-radio-field:checked+.passengerForm-radio-label {
+  background-color: #ffa800;
+}
+
+.male {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.female {
+  margin-left: -1px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+
+.passengerForm-checkbox {
+  width: 28px;
+  height: 28px;
+}
+
+.passengerForm-checkbox-label {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+
+  color: #292929;
+  margin: 0 0 0 20px;
+}
+
+.checkbox-control {
+  display: flex;
+  align-items: center;
+}
+
+.passengerForm-document {
+  width: 690px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.passengerForm-field--document {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.passengerForm-list--passport {
+  margin-top: 16px;
+  width: 205px;
+}
+
+.passengerForm-list--certificate {
+  margin-top: 16px;
+  width: 444px;
+}
+
+.passengerForm-footer {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  min-height: 126px;
+}
+
+.passengerForm-footer.done {
+  background-color: #b2f6a1;
+}
+
+.passengerForm-footer.warning {
+  background-color: rgba(255, 61, 0, 0.38);
+}
+
+.passengerForm-message {
+  margin-right: auto;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  color: #ffffff;
+
+  display: flex;
+  align-items: center;
+}
+
+.message-done-img {
+  background-image: url('../../../../../src/images/passenger/pass3.png');
+  width: 32px;
+  height: 32px;
+  margin-right: 15px;
+  background-repeat: no-repeat;
+}
+
+.message-warning-img {
+  background-image: url('../../../../../src/images/passenger/pass6.png');
+  width: 32px;
+  height: 32px;
+  margin-right: 15px;
+  background-repeat: no-repeat;
+}
+
+.passengerForm-button {
+  background-color: inherit;
+  padding: 12px 24px;
+  border: 1px solid #292929;
+  border-radius: 5px;
+  color: #292929;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+.passengerForm-button:hover {
+  background-color: #ffffff;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  color: #ffa800;
+}
+
+.passengerForm-button:active {
+  background-color: #ffa800;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  color: #292929;
 }
