--- a/src/components/Pages/OrderPage/OrderPage.css
+++ b/src/components/Pages/OrderPage/OrderPage.css
@@ -207,169 +207,10 @@
   margin-left: 10px;
 }
 
-
-.train-container-card {
-  background-color: #fff;
-  border: 1px solid #c4c4c4;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, .3);
-  display: flex;
-  margin-bottom: 50px;
-  min-height: 250px;
-  min-width: 950px;
+.train-header-elements {
+  list-style: none;
+  padding-left: 0;
 }
-
-.train-container-card-logo {
-  align-items: center;
-  background-color: #e4e0e9;
-  display: flex;
-  flex-direction: column;
-  padding: 32px 18px 24px;
-  width: 20%;
-}
-
-.train-container-card-logo-img {
-  margin-bottom: 17px;
-  margin-top: 15%;
-}
-
-.train-container-card-logo-body {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-}
-
-.train-container-card-logo-body-header {
-  align-self: center;
-  color: #3e3c41;
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 28px;
-  margin-bottom: 15px;
-  margin-top: 0;
-}
-
-.train-container-card-logo-body-direction {
-  font-size: 16px;
-  line-height: 19px;
-  margin: 0;
-  text-transform: capitalize;
-}
-
-
-.train-container-card-body {
-  padding: 54px 39px;
-  width: 50%;
-}
-
-.train-container-card-body-section {
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 40px;
-}
-
-.train-container-card-body-direction-time {
-  color: #000;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 28px;
-  margin: 0;
-}
-
-.train-container-card-body-direction-place {
-  color: #928f94;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 19px;
-  margin: 0 0 20px;
-  text-transform: capitalize;
-}
-
-.train-container-card-body-between-time {
-  color: #c4c4c4;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 21px;
-  margin: 0 30px 10px 0;
-}
-
-.train-container-card-places {
-  align-items: flex-end;
-  border-left: 1px dashed #e5e5e5;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 32px 22px 24px;
-  width: 30%;
-}
-
-.train-container-card-places-list-item {
-  align-items: baseline;
-  display: flex;
-  justify-content: space-between;
-}
-
-.train-container-card-places-list-item-type {
-  color: #3e3c41;
-  font-size: 16px;
-  line-height: 19px;
-  width: 74px;
-}
-
-.train-container-card-places-list-item-quantity {
-  color: #ffa800;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-}
-
-.train-container-card-places-list-item-price {
-  color: #928f94;
-  font-size: 16px;
-  line-height: 19px;
-  margin-left: 10px;
-  padding-right: 5px;
-  display: flex;
-  align-items: baseline;
-}
-
-.train-container-card-places-list-item-price-span2 {
-  background-size: 16px 19px;
-  color: #2d2b2f;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 28px;
-  margin-left: 4px;
-  padding-right: 4px;
-}
-
-.train-container-card-places-list-item-price-img {
-  height: 19px;
-  width: 16px;
-}
-
-.train-container-card-places-button {
-  background: #ffa800;
-  border: 1px solid #ffa800;
-  border-radius: 5px;
-  color: #fff;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 28px;
-  padding: 6px 20px;
-  text-align: center;
-}
-
-.train-container-card-places-button:hover {
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.train-container-card-places-button:active {
-  color: #ffa800;
-  border: 1px solid #ffa800;
-  background-color: #e5e5e5;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-
 
 
 .payment {
